# market_helper

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  DEVPLAN.md  DEVPLAN.portfolio.md  DEVPLAN.regime.md  README.md  data_utility.py  design_mockup.html  env.yml  pyproject.toml
.agents/skills/: repo-onboarding-skill
.claude/: settings.json
DEV_DOCS/: PLAN.md  RULES.md
DEV_DOCS/docs/: architecture.md  regime_engine_v2.md  requirements.md  strategy_notes.md
DEV_REQ/: PLAN.md  RULES.md
configs/: env.yaml  report_accounts.example.env  security_reference.csv  security_universe.csv  settings.example.json
configs/integration/: README.md
configs/option_advisor/: advisor_rules.yaml
configs/portfolio_monitor/: country_lookthrough_manual.csv  eq_country_lookthrough.csv  futures_roll_calendar.yml  fx_hedge_advisor.yml  (+8 more)
docs/: architecture.md  data_dictionary.md  ibkr_web_api_auth.md  provider_matrix.md  read_only_policy.md  refactor_blueprint.md  requirements.md
market_helper/: __init__.py  data_sources.py  download.py  main.py  models.py  regime_rulebook.py
plan/: backlog.md  current.md  feature-regime-detection-macro-market-1.md
scripts/: _resolve_conda.bat  launch_ui.bat  launch_ui.sh  launch_ui_startup.bat  loading.html  run_daily_report.bat  run_data_update.bat  run_data_update.sh  run_fred_sync.bat  run_fred_sync.sh  run_market_regime_sync.bat  run_market_regime_sync.sh  run_regime_detection.bat  run_regime_detection.sh  run_report.bat  run_report.sh  setup_python_env.bat  setup_python_env.sh
tests/: test_download.py  test_regime_rulebook.py
(+609 files in other folders)
