[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "market-helper"
version = "0.1.0"
description = "Utilities for downloading free macro, market, and news data."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "PyYAML>=6.0",
    "ib_async>=0.9.86",
    "numpy>=1.26",
    "pandas>=2.2",
    "plotly>=6.0",
]

[tool.setuptools.packages.find]
include = ["market_helper*"]
